refactor match and group repositories; replace Collectors.toList() with toList() for improved readability and performance