@@ -11,7 +11,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class MatchRepoInMemory implements MatchRepo {
@@ -37,10 +36,8 @@ public class MatchRepoInMemory implements MatchRepo {
         return matches.values()
                 .stream()
                 .filter(m -> m.getGroupId().equals(groupId))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
 
     @Override
     public List<Match> findAll() {
